--- a/css/style.css
+++ b/css/style.css
@@ -719,3 +719,12 @@ button {
   text-decoration: underline;
 }
 
+img[loading="lazy"] {
+  opacity: 0;
+  transition: opacity 0.4s ease;
+}
+
+img.loaded {
+  opacity: 1;
+}
+
